@@ -37,9 +37,9 @@ public class ConceptSetVersionToConceptSetVersionFullDTOConverter
             throw new RuntimeException(e);
         }
 
-        ConceptSet conceptSet = conceptSetRepository.findById(source.getAssetId().intValue());
+        ConceptSet conceptSet = conceptSetRepository.findById(source.getAssetId().intValue()).get();
         ExceptionUtils.throwNotFoundExceptionIfNull(conceptSet,
-                String.format("There is no concept set with id = %d.", source.getAssetId()));
+                "There is no concept set with id = %d.".formatted(source.getAssetId()));
 
         ConceptSetVersionFullDTO target = new ConceptSetVersionFullDTO();
         target.setItems(items);
